--- a/app/globals.css
+++ b/app/globals.css
@@ -45,7 +45,7 @@ body {
   justify-content: center;
   align-items: center;
   /* backdrop-filter: blur(4px); */
-  z-index: 100; 
+  z-index: 9999 !important; 
 }
 
 .border-f{
