--- a/app/globals.css
+++ b/app/globals.css
@@ -57,7 +57,7 @@ body {
   z-index: 999 !important; 
 }
 
-.border-f{
+/* .border-f{
   @apply border border-[rgb(29,205,159)]
 }
 .border-t{
@@ -71,7 +71,7 @@ body {
 }
 .border-l{
   @apply border border-[rgb(29,205,159)]
-}
+} */
 
 .form-input{
   @apply focus:outline-none focus:ring-2 focus:ring-blue-400 focus:border-transparent
