comment section S2, send Email FIX S1

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ html, body {
 
 body {
   color: var(--foreground);
-  background-image: url('/photo/second.webp');
+  background-image: url('/photo/71.webp');
   background-size: cover;
   background-position: center;
   /* background-repeat: no-repeat; */
